# cc_program

./: CLAUDE.md  README.md  ai_instructions.md  angular.json  package.json  pnpm-lock.yaml
.github/workflows/: build-windows.yml  release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  fs.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: config.rs  files.rs  logs.rs  mod.rs  peers.rs  transfers.rs
src-tauri/src/network/: discovery.rs  listener.rs  mod.rs  scanner.rs
src-tauri/src/protocol/: codec.rs  messages.rs  mod.rs
src-tauri/src/transfer/: chunker.rs  mod.rs  receiver.rs  sender.rs  tracker.rs
src-tauri/windows/: installer-hooks.nsh
src/app/: app.component.css  app.component.html  app.component.ts
src/app/core/models/: peer.model.ts  transfer.model.ts
src/app/core/services/: notification.service.ts  peer.service.ts  tauri-bridge.service.ts  transfer.service.ts
src/app/features/file-selector/: file-selector.component.css  file-selector.component.html  file-selector.component.spec.ts  file-selector.component.ts
src/app/features/log-viewer/: log-viewer.component.css  log-viewer.component.html  log-viewer.component.ts
src/app/features/peer-list/: peer-list.component.css  peer-list.component.html  peer-list.component.ts
src/app/features/transfer-monitor/: transfer-monitor.component.css  transfer-monitor.component.html  transfer-monitor.component.ts
src/app/shared/pipes/: bytes-format.pipe.ts
