[package]
name = "net-monitor-for-computer-center"
version = "0.1.0"
description = "LAN P2P File Deployer"
authors = ["you"]
edition = "2021"

[lib]
name = "net_monitor_for_computer_center_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha1 = "0.10"
dashmap = "6"
gethostname = "1"
socket2 = "0.5"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
if-addrs = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
